# Exo-Suit

./: .gitignore  .nojekyll  100_PERCENT_CLEANUP_STRATEGY.md  100_PERCENT_SOLIDITY_IMPROVEMENT_PLAN.md  1M_TOKEN_UPGRADE_GAME_PLAN.md  404.html  AGENT_EXO_SUIT_STATUS.md  AGENT_EXO_SUIT_V2_STATUS.md  AGENT_EXO_SUIT_V3_STATUS.md  AGENT_EXO_SUIT_V5_PREVIEW.md  AGENT_FOLDER_INDEX_GENERATOR_WORKING.py  AGENT_LEGACY_LOGGER.py  AGENT_LEGACY_LOGGER_SYNC_COMPLETION_REPORT.md  AGENT_LOCAL_INDEX_SYSTEM.md  AGENT_LOCAL_INDEX_SYSTEM_COMPLETION_REPORT.md  AGENT_LOGGER_README.md  AGENT_READ_FIRST.md  AGENT_STATUS.md  AGENT_TASK_CHECKLIST.md  AGENT_WORK_COMPLETION_SUMMARY.md  API_REFERENCE.md  ARCHITECTURE.md  Agent read me for feedback.txt  AgentExoSuitV3.ps1  AgentExoSuitV4.ps1  AgentExoSuitV5.ps1  AgentExoSuitV5_Optimized.ps1  AgentExoSuitV5_Optimized_Simple.ps1  BRANDING_GUIDE.md  CHANGELOG.md  CLEANUP_SUMMARY.md  COMPLETE_SYSTEM_SYNCHRONIZATION_REPORT.md  COMPONENT-LIBRARY.md  COMPREHENSIVE_WEBSITE_STATUS_REPORT.md  CONTRIBUTING.md  CREDIBILITY_RECOVERY_GAMEPLAN.md  CRITICAL_DATA_LOSS_ANALYSIS_REPORT.md  CRITICAL_DATA_RECOVERY_COMPLETION_REPORT.md  CRITICAL_DATA_RECOVERY_PLAN.md  CRITICAL_FEEDBACK_INTEGRATION_COMPLETION_REPORT.md  (+248 more)
.github/: pull_request_template.md
Cleanup/: CLEANUP_SUMMARY.md
DeepSpeed ZeRO-Infinity/: requirements.txt  setup.py  train_model.py
Project White Papers/: CLEANUP_ORGANIZATION_PLAN.md  COMPREHENSIVE_REBUILD_PLAN_BASED_ON_SCAN_RESULTS.md  DRIFT_RECOVERY_COMPLETION_REPORT.md.emoji_backup  FINAL_2_PERCENT_QUALITY_PUSH_GAME_PLAN.md  FINAL_EDGE_CASE_SCAN_PROGRESS_REPORT.md  INSTALLATION.md  QA_TESTING.md  README.md  README.md.emoji_backup  README2.md  README2.md.emoji_backup  READTHISTFIRSTAGENT.txt  REBUILD_SYSTEM_TESTING_PROGRESS_REPORT.md  SMART_LOG_MANAGEMENT_GUIDE.md.emoji_backup  SPEED_BOOST_QUICK_START.md.emoji_backup  TECHNICAL_SPECS.md  TROUBLESHOOTING.md  USER_GUIDE.md  V4.0_ERROR_PATCHING_GAME_PLAN.md.emoji_backup  V5.0_BUILD_AND_REPAIR_GAME_PLAN.md  V5.0_CURRENT_OPERATIONAL_STATUS.md  V5.0_IMPLEMENTATION_ROADMAP.md  V5.0_KAI_INTEGRATION_SPECIFICATIONS.md  V5.0_LOCAL_SECURITY_SPECIFICATIONS.md  V5.0_PRODUCTION_READINESS_REPORT.md  V5.0_PRODUCTION_READINESS_REPORT.md.emoji_backup  V5.0_SYSTEM_READINESS_REPORT.md  V5.0_TECHNICAL_SPECIFICATIONS.md  V5.0_ULTIMATE_ACHIEVEMENT_SUMMARY.md  V5.0_ULTIMATE_ACHIEVEMENT_SUMMARY.md.emoji_backup  V5_DREAM_BUILDER_TEST_GAME_PLAN.md.emoji_backup  V5_OFFICIAL_UPGRADE_GAME_PLAN.md  V5_SELF_SEALING_SYSTEM_STATUS.md  WEBSITE_SETUP_GUIDE.md  WHITE_PAPER_FIX_PLAN.md  WHITE_PAPER_MASTER_INDEX.md
REAL_PROJECT_SCAN.json/: health_scan_v4_report.json
Testing_Tools/: emoji_performance_test_results.json  emoji_performance_test_results.txt  performance_test_results_20250811_082332.json  performance_test_results_20250811_082808.json  performance_test_results_20250811_082948.json  performance_test_results_20250811_083028.json  performance_test_results_20250811_083106.json  v5_performance_benchmark_Extreme_20250811_083553.json  v5_performance_benchmark_Ultimate_20250811_083632.json
V5.0_PROJECT_HEALTH_REPORT.json/: health_scan_v4_report.json  lock_age.json
_layouts/: default.html
backup_ucml_purge_20250818_220000/: UCML_AGENT_BRIDGE.py  UCML_COMPRESSION_ANALYZER.py  UCML_OPTIMIZED_FRACTAL_COMPRESSOR.py  UCML_PHASE_2_KILLER_APP_1_COMPLETION_REPORT.md  UCML_PROMPT_VC.py  UCML_PROMPT_VC_ENHANCED_TEST_REPORT.json  UCML_PROMPT_VC_TEST.py  UCML_PROMPT_VC_TEST_REPORT.json  UCML_QUANTUM_COMPRESSOR.py  UCML_STRESS_TEST_RESULTS_1755554095.json  UCML_TYPE_SYSTEM.py
benchmarks/: README.md
components/: agent-legacy-logger.html  compression-demo.html  enhanced-hero.html  faq-section.html  features.html  footer.html  hall-of-fame.html  header.html  hero.html  interactive-demos.html  kai-integration.html  kai-story.html  legacy-of-failure.html  legendary-list.html  mmh-rs-showcase.html  performance-showcase.html  performance.html  project-story.html  roadmap.html  security.html  test-component.html  tool-ecosystem.html  white-papers.html
config/: advanced_integration_config.json  chaos_config.json  (+4 more)
mmh_rs_codecs/: Cargo.toml  LOSSLESS_COMPRESSION_FIX_PLAN.md  MMH_RS_100_PERCENT_CERTAINTY_ACHIEVEMENT_REPORT.md  MMH_RS_META_CODEC_BREAKTHROUGH_DOCUMENTATION.md  MMH_RS_ULTIMATE_VALIDATION_STATUS.md  MMH_RS_ULTIMATE_VALIDATOR.py  PHASE_1_COMPLETION_REPORT.md  PROJECT_STATUS_SUMMARY.md  REVOLUTIONARY_BREAKTHROUGH_SUMMARY.md  SILESIA_PATTERN_INTELLIGENCE_BREAKTHROUGH.md  SPINNER_INTEGRATION_GUIDE.md  SYSTEM_RECOVERY_SUMMARY.md  adaptive_sampling_system.rs  advanced_self_healing_system.py  clean_optimized_test.rs  enhanced_neural_entanglement_ai.py  enhanced_pattern_engine.rs  enhanced_pattern_recognition_engine.rs  enhanced_phase2_test.rs  hierarchical_codec.rs  high_performance_pattern_analyzer.rs  lib.rs  libenhanced_pattern_recognition_engine.rlib  libpattern_intelligence_engine.rlib  massive_real_data_analysis_1755625063.txt  meta_codec_integration_results.json  mmh_rs_meta_codec.long-type-10678960971443664784.txt  mmh_rs_meta_codec.long-type-10967383233123876784.txt  mmh_rs_meta_codec.long-type-7743457090042810684.txt  mmh_rs_meta_codec.rs  mmh_rs_meta_codec_integration.py  mmh_rs_system_integrator.py  mmh_rs_validation_results.json  optimized_compression_test.rs  pattern_analyzer.rs  pattern_intelligence_engine.rs  pattern_recognition_engine.rs  pdb_analysis_report_1755627862.txt  phase1_standalone_test.rs  phase2_test_runner.long-type-9184824143096378151.txt  (+31 more)
mmh_rs_raptor_system/: Cargo.toml  lib.rs  mmh_rs_core.rs  neural_entanglement_codec.rs  pattern251.rs  raptorq_fec.rs  self_healing_system.rs
(+1949 files in other folders)
