[package]
name = "mmh-rs-codecs"
version = "0.1.0"
edition = "2021"
authors = ["MMH-RS Team"]
description = "Revolutionary compression codecs for MMH-RS system"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
num_cpus = "1.0"

[lib]
name = "mmh_rs_codecs"
path = "mod.rs"

[[bin]]
name = "mmh-rs-test"
path = "test_runner.rs"

[features]
default = ["std"]
std = []
no_std = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
