[package]
name = "mmh-rs-codecs"
version = "0.1.0"
edition = "2021"
authors = ["MMH-RS Team"]
description = "Revolutionary compression codecs for MMH-RS system"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
num_cpus = "1.0"
# Compression dependencies
zstd = "0.12"
lz4 = "1.24"
brotli = "3.3"
bincode = "1.3"
sha2 = "0.10"
# Real data generation dependencies
chrono = "0.4"
flate2 = "1.0"
walkdir = "2.3"

[lib]
name = "mmh_rs_codecs"
path = "lib.rs"

[[bin]]
name = "mmh-rs-test"
path = "test_runner.rs"

[[bin]]
name = "test_enhanced_patterns"
path = "test_enhanced_patterns.rs"

[[bin]]
name = "mmh-rs-animated"
path = "mmh_rs_animated_test.rs"

[features]
default = ["std"]
std = []
no_std = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
